erDiagram

    DiningTable {
        string id PK
        string restaurantId FK
        string publicCode UK
        int number
        int capacity
        int qrVersion
        string status "LIBRE | OCUPADA | NO_DISPONIBLE"
        float posX
        float posY
        string shape
        timestamp createdAt
        timestamp updatedAt
    }

    DiningSession {
        string id PK
        string restaurantId FK
        string openedByUserId FK
        string closedByUserId FK
        string status "PENDIENTE_ACTIVACION | ACTIVA | EN_CONSUMO | POR_LIQUIDAR | LIQUIDADA | CERRADA | CANCELADA"
        string joinCode UK
        string accessCodeHash
        int pax
        timestamp openedAt
        timestamp activatedAt
        timestamp firstOrderAt
        timestamp liquidationStartedAt
        timestamp settledAt
        timestamp closedAt
        timestamp updatedAt
    }

    DiningSessionTable {
        string id PK
        string diningSessionId FK
        string tableId FK
        timestamp joinedAt
        timestamp leftAt
    }

    Guest {
        string id PK
        string diningSessionId FK
        string name
        int seatNumber
        boolean isHost
        boolean isActive
        timestamp joinedAt
        timestamp leftAt
        timestamp createdAt
    }

    Restaurant ||--o{ DiningTable : "tiene"
    Restaurant ||--o{ DiningSession : "tiene"
    DiningTable ||--o{ DiningSessionTable : "en"
    DiningSession ||--o{ DiningSessionTable : "ocupa"
    DiningSession ||--o{ Guest : "tiene"
    AppUser ||--o{ DiningSession : "abre"
